--- a/style.css
+++ b/style.css
@@ -2,6 +2,15 @@ html, body {
   margin: 0;
   padding: 0;
 }
-canvas {
-  display: block;
+
+
+h1 {
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  z-index: 10;
+
+  font-size: 128px;
+  font-weight: 50;
+  color:orange;
 }
