--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html, body {
 }
 
 .sketch-div {
-  z-index: 1;
+  z-index: 0;
 }
 
 h1 {
@@ -12,10 +12,13 @@ h1 {
   display: flex;
   justify-content: center;
   height: 100vh;
-  z-index: 2;
+  z-index: 1;
 
   font-size: 128px;
   font-weight: 50;
   color:white;
 }
 
+a-scene {
+  z-index: 1;
+}
